feat: add property survey_user_id

--- a/api/src/shared/infra/views/emails/npsMail.hbs
+++ b/api/src/shared/infra/views/emails/npsMail.hbs
@@ -5,20 +5,20 @@
     align-items: center;
     justify-content: center;
     align-content: center;
-    width: 800px;
+    wsurvey_user_idth: 800px;
   }
 
   .answers {
     display: flex;
     justify-content: space-between;
-    width: 350px;
+    wsurvey_user_idth: 350px;
   }
 
   .value {
     text-align: center;
     text-decoration: none;
     color: #FFF;
-    width: 15px;
+    wsurvey_user_idth: 15px;
     padding: 10px;
     margin: 5px;
     background-color: #8257E6;
@@ -28,8 +28,8 @@
   .level {
     display: flex;
     justify-content: space-between;
-    max-width: 350px;
-    width: 350px;
+    max-wsurvey_user_idth: 350px;
+    wsurvey_user_idth: 350px;
     margin: 10px;
   }
 </style>
@@ -48,16 +48,16 @@
   </div>
 
   <div class="answers">
-    <a class="value" href="{{link}}/1/?user={{user_id}}">1</a>
-    <a class="value" href="{{link}}/2/?user={{user_id}}">2</a>
-    <a class="value" href="{{link}}/3/?user={{user_id}}">3</a>
-    <a class="value" href="{{link}}/4/?user={{user_id}}">4</a>
-    <a class="value" href="{{link}}/5/?user={{user_id}}">5</a>
-    <a class="value" href="{{link}}/6/?user={{user_id}}">6</a>
-    <a class="value" href="{{link}}/7/?user={{user_id}}">7</a>
-    <a class="value" href="{{link}}/8/?user={{user_id}}">8</a>
-    <a class="value" href="{{link}}/9/?user={{user_id}}">9</a>
-    <a class="value" href="{{link}}/10/?user={{user_id}}">10</a>
+    <a class="value" href="{{link}}/1/?user={{survey_user_id}}">1</a>
+    <a class="value" href="{{link}}/2/?user={{survey_user_id}}">2</a>
+    <a class="value" href="{{link}}/3/?user={{survey_user_id}}">3</a>
+    <a class="value" href="{{link}}/4/?user={{survey_user_id}}">4</a>
+    <a class="value" href="{{link}}/5/?user={{survey_user_id}}">5</a>
+    <a class="value" href="{{link}}/6/?user={{survey_user_id}}">6</a>
+    <a class="value" href="{{link}}/7/?user={{survey_user_id}}">7</a>
+    <a class="value" href="{{link}}/8/?user={{survey_user_id}}">8</a>
+    <a class="value" href="{{link}}/9/?user={{survey_user_id}}">9</a>
+    <a class="value" href="{{link}}/10/?user={{survey_user_id}}">10</a>
   </div>
   <br />
   <br />
